Fixed broken vertical alignment on Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,15 @@ body{
 }
 body > div{
     position: absolute;
-    top:0;
-    bottom: 0;
+    top:50%;
     left: 0;
     right: 0;
     margin: auto;
     width: fit-content;
     height: fit-content;
     color: beige;
-    text-align: center
+    text-align: center;
+    transform: translateY(-50%);
 }
 #photo-holder {
     height: 50vmin;
